Project

General

Profile

Actions

Bug #5812

closed

test-all is stuck on Windows

Bug #5812: test-all is stuck on Windows

Added by usa (Usaku NAKAMURA) over 14 years ago. Updated over 14 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.0.0dev (2011-12-26 trunk 34131) [x64-mswin64_100]
Backport:
[ruby-dev:45051]

Description

以下の2つのテストがWindowsで刺さります。
test/ruby/test_thread.rb TestThreadGroup#test_thread_timer_and_interrupt
test/thread/test_queue.rb TestQueue#test_thr_kill

要するにIO#read中にThread#killしても終わらないことがあるというわけですが、
しばらく頑張ってみたものの(thread_pthread.cからsignal_thread_listの仕組みを
持ってきてみるとか)修正できていないので、忘れないようにチケット化しておきます。
このままだと越年コース。

ちなみにtrunkのみならず1.9系全般で起きています。
今までテストがなかったのがいけないんですな。


Files

thread_signal.patch (3.85 KB) thread_signal.patch h.shirosaki (Hiroshi Shirosaki), 01/23/2012 11:47 AM

Updated by h.shirosaki (Hiroshi Shirosaki) over 14 years ago Actions #1 [ruby-dev:45149]

Windowsのtest-allのパッチを作ってみました。検討をお願いします。

  • TestThreadGroup#test_thread_timer_and_interrupt
    GenerateConsoleCtrlEventのCTRL_C_EVENTで0でないprocess groupを指定した場合は、CTRL+C signalは無視されるようです。

http://msdn.microsoft.com/en-us/library/windows/desktop/ms683155%28v=vs.85%29.aspx
Generates a CTRL+C signal. This signal cannot be generated for process groups. If dwProcessGroupId is nonzero, this function will succeed, but the CTRL+C signal will not be received by processes within the specified process group.

かわりに、CTRL_BREAK_EVENTにして、process groupを指定するようにしました。
CTRL_BREAK_EVENTもSIGINTに対応するのではないかというコメントがありました。
http://blade.nagaokaut.ac.jp/cgi-bin/scat.rb/ruby/ruby-dev/18096

s.exited?, s.signaled?, s.stopped? は、windowsではunixのように取れないようなので、その部分のテストを修正しました。

http://bugs.ruby-lang.org/projects/ruby-trunk/repository/entry/win32/win32.c#L3893
if (stat_loc) *stat_loc = exitcode << 8;

statusの下位8bitは常に0になるように見えます。

  • TestQueue#test_thr_kill
    Thread.newの中のreadのrb_w32_wait_events_blockingを実行した時、GET_THREAD()でmain threadが取れることがあります。
    そのため、killに反応しないようです。
    かわりにruby_thread_from_native()を使った場合は、うまく動作しました。
    他のGET_THREAD()もruby_thread_from_native()に変えてみました。

  • ruby -e '$stdin.read'としたとき、CTRL-Cを押してもrubyが終了しません。
    CTRL-Cを2回押すか、CTRL-C + Enterだと終了します。
    これはテストにはないのですが、test_thread_timer_and_interruptと関連するのではないかと思います。

CTRL-Cを押したとき、ReadFileのエラーで、ERROR_OPERATION_ABORTEDになるので、そのときはretryしないようにしました。

trunkにこのパッチを当てて、mingw on Windows7でmake test, make test-allを確認しました。
make testは成功、make test-allのエラーは増えていませんでした。

Updated by usa (Usaku NAKAMURA) over 14 years ago Actions #2 [ruby-dev:45154]

すばらしい!
commitしてください。

Updated by Anonymous over 14 years ago Actions #3

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r34387.
Usaku, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • test/zlib/test_zlib.rb (TestZlibGzipReader#test_reader_wrap): set
    binmode explicitly for fixing test error on Windows. This is consistent
    with r34243.
    [ruby-dev:45149] [Bug #5812]
Actions

Also available in: PDF Atom