* thread_win32.c (rb_w32_wait_events_blocking): use   ruby_thread_from_native() instead of GET_THREAD() because   GET_THREAD() doesn't always return the current thread and   WaitForMultipleObjects() at rb_w32_read() doesn't return by   Thread#kill. This fixes TestQueue#test_thr_kill failure on   Windows.

* thread_win32.c (rb_w32_wait_events): use ruby_thread_from_native()
  instead of GET_THREAD() for consistency with the above change.

* thread_win32.c (rb_w32_sleep): ditto.

* thread_win32.c (rb_w32_Sleep): ditto.
  [ruby-dev:45149] [Bug #5812]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34388 b2dd03c8-39d4-4d8f-98ff-823fe69b080e